--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon app.js",
-    "migrate" : "node ./config/database.js"
+    "start": "nodemon app.js",
+    "migrate": "node ./config/database.js"
   },
   "author": "Estel",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "vue-router": "^4.2.5"
   }
 }
